--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         }
 
         .title > a:active nav {
-            height: 100%;
+            height: 100px;
         }
 
         /*하단의 contact 및 배너*/
