renamed:    assets/SVG/3844432-magnifier-search-zoom_110300.svg -> assets/SVG/search_icon.svg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </ul>
             <ul class="search-container banner_4 banner">
                 <input type="text" id="search-input" placeholder="...">
-                <button id="search-button"><img src=""></button>
+                <button id="search-button"><img src="https://github.com/Gangjisu/TermProject/blob/main/assets/SVG/search_icon.svg"></button>
             </ul>
         </ul>
     </footer>
