modified:   index.html 	renamed:    style.css -> index_style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hippocampus</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index_style.css">
 
 </head>
 <body> 
