--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
 </head>
 <body> 
     <!--HTML--> 
-    <div class="background">
-        <img>
-    </div>
+    <div class="background"></div>
     
     <!--상단 아이콘 및 검색 바-->
     <header>
         <ul class="page_head">
             <li>
-                <img src="https://raw.githubusercontent.com/Gangjisu/TermProject/ccf2f8a273c6ff65660cba64b47802a9a94ec4ca/assets/SVG/Logo.svg">
+                <img src="https://raw.githubusercontent.com/Gangjisu/TermProject/ccf2f8a273c6ff65660cba64b47802a9a94ec4ca/assets/SVG/Logo.svg" alt="X">
             </li>
             <li class="search-container banner_4 banner">
                 <input type="text" id="search-input" placeholder="Search for...">
-                <button id="search-button"><img width="15px" height="15px" src="https://raw.githubusercontent.com/Gangjisu/TermProject/21e2c5e9e7d1411e153d1ca3c40bfef541747d7e/assets/SVG/search_icon.svg"></button>
+                <button id="search-button"><img width="15px" height="15px" src="https://raw.githubusercontent.com/Gangjisu/TermProject/21e2c5e9e7d1411e153d1ca3c40bfef541747d7e/assets/SVG/search_icon.svg" alt="X"></button>
             </li>
         </ul>
     </header>
