--- a/index.html
+++ b/index.html
@@ -33,20 +33,16 @@
         <ul class="title">
             <p>Introduction</p>
         </ul>
-
         <!--내용-->
-        <li class="infomation">
-            <p>
-                컴퓨터와 관련된 여러 분야에 관심을 가지며 지식을 넓혀가고 있으며, <br>
-                최근에는 Geforce Now, Xbox Cloud Gaming과 같은 클라우드 게이밍에 관심이 있다.<br>
-                현재의 목표는 컴퓨터 공학을 공부하면서 나중에는 Nvidia ACE, arXiv_Demo, <br>
-                LLM을 게임과 같은 시뮬레이션 속에서 응용하는 것을 공부해보는 것이다.
-            </p>
-        </li>
-
-        <!--사진-->
-        <li>
+        <li class="information">
             <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/gang.png?raw=true">
+            <br>
+            &nbsp; 강지수 &nbsp;&nbsp;&nbsp;전공: 컴퓨터공학&nbsp;&nbsp;&nbsp;출신지: 경기도 용인<br>
+            <br>
+            컴퓨터와 관련된 여러 분야에 관심을 가지며 지식을 넓혀가고 있으며,
+            최근에는 Geforce Now, Xbox Cloud Gaming과 같은 클라우드 게이밍에 관심이 있다.
+            현재의 목표는 컴퓨터 공학을 공부하면서 나중에는 Nvidia ACE, arXiv_Demo,
+            등과 같은 것을 LLM을 게임과 같은 시뮬레이션 속에서 응용하는 것을 공부해보는 것이다.
         </li>
     </ul>
 
@@ -56,19 +52,27 @@
         <!--Major-->
         <li class="title">
             <a href="#" class="toggleButton">Major</a>
-            <div class="title_content">This is the content for Toggle 1.</div>
+            <div class="title_content">
+                This is the content for Toggle 1.
+            </div>
         </li>
         
         <!--traveldiary-->
         <li class="title">
             <a href="#" class="toggleButton">Travel Diary</a>
-            <div class="title_content">This is the content for Toggle 2.</div>
+            <div class="title_content">
+                This is the content for Toggle 2.
+            </div>
         </li>
 
         <!--memo-->
         <li class="title">
             <a href="#" class="toggleButton">Memo</a>
-            <div class="title_content">This is the content for Toggle 3.</div>
+            <div class="title_content">
+                <span>
+
+                </span>
+            </div>
         </li>
     </ul>
 
