--- a/MEMO.html
+++ b/MEMO.html
@@ -23,12 +23,12 @@
             <li>
                 <br>
                 <br>
-                <a class="top_a" href="Travel_Diary.html">Travel Diary</a>
+                <a class="top_a " href="Travel_Diary.html">Travel Diary</a>
             </li>
             <li>
                 <br>
                 <br>
-                <a class="top_a current_site" href="#">Memo</a>
+                <a class="top_a current_site" >Memo</a>
             </li>
         </ul>
     </div>
