--- a/index.html
+++ b/index.html
@@ -53,15 +53,36 @@
         <li class="title">
             <a href="#" class="toggleButton">Major</a>
             <div class="title_content">
-                This is the content for Toggle 1.
+                <span>
+                    <a href="C_page.html">
+                        <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/c_logo.png?raw=true">
+                    </a>&nbsp;
+                    <a href="WEBpage.html">
+                        <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/html_logo.png?raw=true">
+                    </a>&nbsp;
+                    <a href="Cloudgaming.html">
+                        <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/CG_logo.png?raw=true">
+                    </a>
+                </span>
             </div>
         </li>
         
         <!--traveldiary-->
         <li class="title">
+            <div class="board"></div>
             <a href="#" class="toggleButton">Travel Diary</a>
             <div class="title_content">
-                This is the content for Toggle 2.
+                <span>
+                    <a href="Travel_Diary.html#osaka_">
+                        <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/osaka_logo.png?raw=true">
+                    </a>&nbsp;
+                    <a href="Travel_Diary.html#kyoto_">
+                        <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/kyoto_logo.png?raw=true">
+                    </a>&nbsp;
+                    <a href="Travel_Diary.html#tokyo_">
+                        <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/tokyo_logo.png?raw=true">
+                    </a>
+                </span>
             </div>
         </li>
 
@@ -70,7 +91,12 @@
             <a href="#" class="toggleButton">Memo</a>
             <div class="title_content">
                 <span>
-
+                    <a target="_blank" href="https://memo.naver.com/">
+                        <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/naver_memo_icon.png?raw=true">
+                    </a>&nbsp;
+                    <a href="MEMO.html">
+                        <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/NativeMEMO_icon.png?raw=true">
+                    </a>
                 </span>
             </div>
         </li>
