24_06_02-Mac change search change contact

--- a/MEMO.html
+++ b/MEMO.html
@@ -54,9 +54,9 @@
             </ul>
             <ul class="banner_2 banner" >
                 <li><p>Contact<p></li>
-                <li><a href="#">Address</a></li>
-                <li><a href="#">Phone</a></li>
-                <li><a href="#">E-mail</a></li>
+                <li><a href="#" onclick="address()">Address</a></li>
+                <li><a href="#" onclick="phone()">Phone</a></li>
+                <li><a href="#" onclick="email()">E-mail</a></li>
             </ul>
             <ul class="banner_3 banner">
                 <li><p>Source</p></li>
