--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img src="https://github.com/Gangjisu/TermProject/blob/main/assets/gang.png?raw=true">
             <p>
             <br>
-            &nbsp; 강지수 &nbsp;&nbsp;&nbsp;전공: 컴퓨터공학&nbsp;&nbsp;&nbsp;출신지: 경기도 용인<br>
+             강지수 전공: 컴퓨터공학 출신지: 경기도 용인<br>
             <br>
             컴퓨터와 관련된 여러 분야에 관심을 가지며 지식을 넓혀가고 있으며,
             최근에는 Geforce Now, Xbox Cloud Gaming과 같은 클라우드 게이밍에 관심이 있다.
