24_06_03-Mac --change code-- responsive update

--- a/MEMO.html
+++ b/MEMO.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>Hippocampus Memo</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="memo_style.css">
+    <link rel="stylesheet" href="memo_style.css" media="screen and (min-width: 710px)">
+    <link rel="stylesheet" href="M_memo_style.css" media="screen and (max-width: 710px)">
 
 </head>
 <body>
     <div class="top_bar">
         <ul class="page_head">
             <li>
-                <a href="index.html"><div class="img_box"><div class="site_img"></div></div></a>
+                <a href="index.html"><img class="site_img" src="https://github.com/Gangjisu/TermProject/blob/101a3d080deed44e9a4e6a1ccf848456b1685eff/assets/NativeMEMO_icon.png?raw=true"></a>
             </li>
             <li>
                 <br>
@@ -23,7 +24,7 @@
             <li>
                 <br>
                 <br>
-                <a class="top_a " href="Travel_Diary.html">Travel Diary</a>
+                <a class="top_a " href="Travel_Diary.html">TravelDiary</a>
             </li>
             <li>
                 <br>
