--- a/Travel_Diary.html
+++ b/Travel_Diary.html
@@ -2,10 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8"> <!--MAC에서 한글 깨짐 방지-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>TERM PROJECT</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="diary_style.css">
+    <link rel="stylesheet" href="diary_style.css" media="screen and (min-width: 710px)">
+    <link rel="stylesheet" href="M_diary_style.css" media="screen and (max-width: 710px)">
+
 
 </head>
 <body>
@@ -14,22 +17,22 @@
     <div class="top_bar">
         <ul class="page_head">
             <li>
-                <a href="index.html"><div class="img_box"><div class="site_img"></div></div></a>
+                <a href="index.html"><img class="site_img" src="https://raw.githubusercontent.com/Gangjisu/TermProject/ccf2f8a273c6ff65660cba64b47802a9a94ec4ca/assets/SVG/Logo.svg"></a>
             </li>
             <li>
                 <br>
                 <br>
-                <a class="top_a" href="Cloudgaming.html">Major</a>
+                <a class="top_a " href="Cloudgaming.html">Major</a>
             </li>
             <li>
                 <br>
                 <br>
-                <a class="top_a current_site">Travel Diary</a>
+                <a class="top_a current_site" href="Travel_Diary.html">TravelDiary</a>
             </li>
             <li>
                 <br>
                 <br>
-                <a class="top_a" href="MEMO.html">Memo</a>
+                <a class="top_a" href="MEMO.html" >Memo</a>
             </li>
         </ul>
     </div>
