--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Hippocampus</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="index_style.css">
+    <link rel="stylesheet" href="index_style.css" media="screen and (min-width: 710px)">
+    <link rel="stylesheet" href="M_index_style.css" media="screen and (max-width: 710px)">
 
 </head>
 <body id="content">
     <!--HTML--> 
-    <div class="background"></div>
+    <div id="wallpaper" class="background" ></div>
 
     <!--상단 아이콘 및 검색 바-->
     <header>
@@ -119,8 +120,8 @@
             </ul>
             <ul class="banner_3 banner">
                 <li><p>Source</p></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">Java Script</a></li>
+                <li><a href="index_style.css">CSS</a></li>
+                <li><a href="script.js">Java Script</a></li>
             </ul>
             
         </ul>
