--- a/C_page.html
+++ b/C_page.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"> <!--MAC에서 한글 깨짐 방지-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>TERM PROJECT</title>
 
     <link rel="stylesheet" href="cg_style.css">
@@ -23,7 +24,7 @@
             <li>
                 <br>
                 <br>
-                <a class="top_a " href="Travel_Diary.html">Travel Diary</a>
+                <a class="top_a " href="Travel_Diary.html">TravelDiary</a>
             </li>
             <li>
                 <br>
