--- a/Cloudgaming.html
+++ b/Cloudgaming.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8"> <!--MAC에서 한글 깨짐 방지-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>TERM PROJECT</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="cg_style.css">
+    <link rel="stylesheet" href="cg_style.css" media="screen and (min-width: 900px)">
+    <link rel="stylesheet" href="M_cg_style.css" media="screen and (max-width: 900px)">
 
 </head>
 <body id="content">
@@ -15,22 +17,22 @@
     <div class="top_bar">
         <ul class="page_head">
             <li>
-                <a href="index.html"><div class="img_box"><div class="site_img"></div></div></a>
+                <a href="index.html"><img class="site_img" src="https://raw.githubusercontent.com/Gangjisu/TermProject/ccf2f8a273c6ff65660cba64b47802a9a94ec4ca/assets/SVG/Logo.svg"></a>
             </li>
             <li>
                 <br>
                 <br>
-                <a class="top_a current_site">Major</a>
+                <a class="top_a current_site" href="Cloudgaming.html">Major</a>
             </li>
             <li>
                 <br>
                 <br>
-                <a class="top_a " href="Travel_Diary.html">Travel Diary</a>
+                <a class="top_a " href="Travel_Diary.html">TravelDiary</a>
             </li>
             <li>
                 <br>
                 <br>
-                <a class="top_a" href="MEMO.html">Memo</a>
+                <a class="top_a " href="MEMO.html">Memo</a>
             </li>
             <li class="search-container">
                 <input type="text" id="searchBox" placeholder="Search for...">
@@ -204,8 +206,8 @@
             </ul>
             <ul class="banner_3 banner">
                 <li><p>Source</p></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">Java Script</a></li>
+                <li><a href="cg_style.css">CSS</a></li>
+                <li><a href="script.js">Java Script</a></li>
             </ul>
 
         </ul>
